# DTEAM-django-prectical-test

./: .flake8  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
CVProject/: pytest.ini
CVProject/CVProject/: __init__.py  celery.py  settings.py  urls.py
CVProject/audit/: admin.py  context_processors.py  middleware.py  models.py  tests.py  urls.py  views.py
CVProject/audit/migrations/: 0001_initial.py
CVProject/audit/templates/audit/: display_settings.html  recent_logs.html
CVProject/main/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
CVProject/main/api/: serializers.py  urls.py
CVProject/main/fixtures/: sample_data.json
CVProject/main/migrations/: 0001_initial.py
CVProject/main/services/: cv_utils.py  gemini_translate.py
CVProject/main/templates/main/: cv_detail.html  cv_detail_pdf.html  cv_list.html  cv_translated_pdf.html
CVProject/main/tests/: tests_cv_api.py
scripts/: celery_setup.sh
